Restoring stable version of motionEye so it doesn't break compatibility with remote stable installations.

--- a/motioneye/config.json
+++ b/motioneye/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "motionEye",
+  "name": "motionEye Stable",
   "version": "dev",
   "slug": "motioneye",
   "description": "Simple, elegant and feature-rich CCTV/NVR for your cameras",
